--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kinsta User</title>
+        <title> User</title>
         <!-- CSS: Inside head tag -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -45,13 +45,7 @@
                 <div class="col-lg mx-2 align-self-center">
                     <div class="my-3">
                         <h1 class="text-center">I'm a Kinsta User</h1>
-                        <p>As a passionate software developer, I am deeply enthusiastic about creating and
-                            developing software applications. I am constantly learning and experimenting with new
-                            technologies and approaches, and I have a strong desire to create innovative and effective
-                            solutions to complex problems. I am driven by curiosity and love for problem-solving, and
-                            I
-                            am committed to producing high-quality, well-designed software that meets the needs of
-                            users.
+                        <p> Cybersecurity enthusiastic | Cloud Azure x2 - AWS - GCP | CTF Player | Cyber Intelligence | Blockchain - Web3 | AI/ML - Data Science | DevSecOps
                         </p>
                     </div>
                 </div>
