--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
             <div class="container-fluid">
                 <div class="mx-4">
-                    <a class="navbar-brand" href="#">Kinsta User</a>
+                    <a class="navbar-brand" href="#">Tech User</a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-lg mx-2 align-self-center">
                     <div class="my-3">
-                        <h1 class="text-center">I'm a Kinsta User</h1>
+                        <h1 class="text-center">I'm a Tech User</h1>
                         <p> Cybersecurity enthusiastic | Cloud Azure x2 - AWS - GCP | CTF Player | Cyber Intelligence | Blockchain - Web3 | AI/ML - Data Science | DevSecOps
                         </p>
                     </div>
